--- a/feed/templates/index.html
+++ b/feed/templates/index.html
@@ -2,9 +2,15 @@
 
 {% block body %}
 
-  <h1>Hello World {{ name }}</h1>
-  {% for i in range10 %}
-    <p>LLolololo: {{ i }}</p>
-  {% endfor %}
-  
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12" style="text-align: center";>
+                <h1>Hello World {{ name }}</h1>
+                {% for i in range10 %}
+                    <p>LLolololo: {{ i }}</p>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
