--- a/feed/templates/index.html
+++ b/feed/templates/index.html
@@ -1,13 +1,26 @@
 {% extends "theme.html" %}
+{% load bootstrap %}
 
 {% block body %}
 
     <div class="container">
         <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                {% if user.is_authenticated %}
+                    <form action="." method="post">
+                        {% csrf_token %}
+                        {{ form|bootstrap }}
+                        <button type="submit" class="btn btn-default">Post!</button>
+                    </form>
+                {% else %}
+                    <p>Not logged in!</p>
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-6 col-md-offset-3" style="text-align: center";>
-                <h1>Hello World {{ name }}</h1>
                 <div class="list-group">
-                {% for post in object_list %}
+                {% for post in posts %}
                     <a href="#" class="list-group-item">
                         <h4 class="list-group-item-heading">{{ post.author }} : {{ post.category }}</h4>
                         <p class="list-group-item-text">{{ post.body }}</p>
@@ -16,6 +29,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
 {% endblock %}
