--- a/feed/templates/theme.html
+++ b/feed/templates/theme.html
@@ -21,10 +21,13 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    {% url "category" category_slug="news" as news_url %}
-                    <li {% if request.path == news_url %}class="active"{% endif %}><a href={{ news_url }}>News</a></li>
+                    {% for category in categories %}
+                        {% url "category" category_slug=category.slug as category_url %}
+                        <li {% if request.path == category_url %}class="active"{% endif %}><a href={{ category_url }}>{{ category.name }}</a></li>
+                    {% endfor %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
