--- a/feed/templates/theme.html
+++ b/feed/templates/theme.html
@@ -40,7 +40,12 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url "logout" %}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url "login" %}">Login</a></li>
+                        <li><a href="{% url "signup" %}">Signup</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
