--- a/feed/templates/index.html
+++ b/feed/templates/index.html
@@ -18,6 +18,9 @@
             </div>
         </div>
         <div class="row">
+            &nbsp;
+        </div>
+        <div class="row">
             <div class="col-md-6 col-md-offset-3" style="text-align: center";>
                 <div class="list-group">
                 {% for post in posts %}
