--- a/feed/templates/registration/logged_out.html
+++ b/feed/templates/registration/logged_out.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 card-bg text-center">
-                <form action="../../../" method="POST">
+                <form action="{% url "logout" %}" method="POST">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="/">
                     <button class="btn btn-default" type="submit">Successfully Log Out!</button>
