--- a/feed/templates/registration/login.html
+++ b/feed/templates/registration/login.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 card-bg">
-                <form action="../../../" method="POST">
+                <form action="{% url "login" %}" method="POST">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ next }}">
                     {{ form|bootstrap }}
