--- a/feed/templates/registration/signup.html
+++ b/feed/templates/registration/signup.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 card-bg">
-                <form action="." method="POST">
+                <form action="{% url "signup" %}" method="POST">
                     {% csrf_token %}
                     {{ form|bootstrap }}
                     <button class="btn btn-default" type="submit">Sign Up!</button>
