--- a/feed/templates/theme.html
+++ b/feed/templates/theme.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>MiniFeed</title>
-    {% load static %}
-    <link rel="stylesheet" href={% static "css/bootstrap.min.css" %}>
+      <meta charset="utf-8">
+      <title>MiniFeed</title>
+      {% load static %}
+      <link rel="stylesheet" href={% static "css/bootstrap.min.css" %}>
+      <link rel="stylesheet" href={% static "css/style.css" %}>
   </head>
   <body>
     <nav class="navbar navbar-default">
